--- a/source/widget/Mall.FindTeacher/find-teacher.less
+++ b/source/widget/Mall.FindTeacher/find-teacher.less
@@ -8,8 +8,8 @@
 @margin:0 17px;
 .body{padding: 0;margin: 0;}
 .find-teacher-container{width: @width;border: @borderea;}
-.find-teacher-rank-title{width: @width;height: 38px;font-size: @fs12;border-bottom: @borderea;background-color: #fcfcfc;}
-.find-teacher-rank-title div{float: left;width: 65px;height: 38px;color: #1e89e0;text-align: center;padding-top: @pt;margin-right: 3px;border-right: @borderea;border-bottom:@borderea;background-color: #fff;}
+.find-teacher-rank-title{width: @width;height: 38px;font-size: @fs12;border: @borderea;background-color: #fcfcfc;}
+.find-teacher-rank-title div{float: left;width: 65px;height: 37px;color: #1e89e0;text-align: center;padding-top: @pt;margin-right: 3px;border-right: @borderea;border-bottom:@borderea;background-color: #fff;}
 .find-teacher-rank-title span{padding-left: 27px;padding-top: @pt;display: inline-block;}
 .find-teacher-rank-title span img{margin-left: 5px;}
 .find-teacher-intro{line-height: 0;font-size: 0;}
@@ -36,7 +36,7 @@
 .find-teacher-follow{width: 50px;height: 20px;background-color: #ffbc3c;position: absolute;right: 10px;border-radius: 2px;font-size: 12px;text-align: center;line-height: 12px;color: #fff;padding-top: 4px;cursor: pointer;}
 .find-teacher-have-followed{background-color: #dfdfdf;color:@c9;}
 .findBreadCrumb{margin-top: 17px}
-.findClass{border: 1px solid #eaeaea;padding: 0;}
+.findClass{border: 1px solid #eaeaea;}
 .findClassRight{padding: 0;}
 .findRightList{margin-bottom: 20px;}
 .findRightTitle{font-size: 16px;color: #666;display: inline-block;margin-bottom: 10px;}
