--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -100,7 +100,7 @@ em {
     padding-left: 0;
     padding-right: 0;
     &.wrap-mall {
-        width: 930px !important;
+        width: 940px !important;
     }
 }
 .wrap-side {
@@ -174,4 +174,18 @@ em {
         font-size: 14px;
         font-family: "Microsoft YaHei";
     }
+}
+.pd0 {
+    padding:0;
+}
+.pd5 {
+    padding:0 5px;
+}
+.pull-right {
+    padding:0;
+}
+.panel-header {
+    height: 42px;
+    line-height: 42px;
+    font-size: 16px;
 }
