--- a/source/widget/courseInfor/ui-course-infor.less
+++ b/source/widget/courseInfor/ui-course-infor.less
@@ -6,8 +6,9 @@
  * @version $Id$
  */
 //课程详情页---包含直播--录播--免费课
+
 .ui-course-infor-wrap {
-	width: 1190px;margin:10px auto 20px;overflow: hidden;
+	overflow: hidden;margin-bottom:20px;
 	.red{
 		color: #e74c3c;
 	}
