--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -51,7 +51,7 @@ ul,li{list-style: none;}
 	font-family: "SimSun";
 	border-bottom: 1px solid @borderColor;
 	width: 100%;
-	padding: 20px 12px 12px 12px;
+	padding: 20px 10px 10px 10px;
 	overflow: hidden;
 	.btn{
 		.border-radius(2px);
@@ -680,4 +680,46 @@ ul,li{list-style: none;}
 			font-weight: normal;
 		}
 	}
+}
+// 筛选条
+.find-teacher-rank-title{
+    background-color: #fcfcfc;
+    border: 1px solid #eaeaea;
+    font-size: 12px;
+    height: 38px;
+    width: 100%;
+    div{
+        background-color: #fff;
+        border-right: 1px solid #eaeaea;
+        color: #1e89e0;
+        float: left;
+        height: 36px;
+        margin-right: 3px;
+        line-height: 36px;
+        text-align: center;
+        width: 65px;
+    }
+    span{
+        display: inline-block;
+        line-height: 36px;
+        padding-left: 27px;
+        img{
+            margin-left: 5px;
+        }
+    }
+}
+.find-teacher-account {
+    color: #999999;
+    float: right;
+    margin-right: 15px;
+    input{
+    	float: left;
+    	margin-top: 11px;
+    	margin-right: 5px;
+    }
+    b{
+    	font-style: normal;
+    	float: left;
+    	font-weight: normal;
+    }
 }
