--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -723,3 +723,12 @@ ul,li{list-style: none;}
     	font-weight: normal;
     }
 }
+
+.search_tips{
+	border-bottom: 1px solid #eaeaea;
+	height: 42px;
+	line-height: 42px;
+	span{
+		color: #cc0000;
+	}
+}
