--- a/source/widget/Mall.FindTeacher/find-teacher.less
+++ b/source/widget/Mall.FindTeacher/find-teacher.less
@@ -14,8 +14,10 @@
 .find-teacher-rank-title span img{margin-left: 5px;}
 .find-teacher-intro{line-height: 0;font-size: 0;}
 .find-teacher-account{float:right;color: @c9;em{color: #e74c3c;font-style: normal;}margin-right: 15px;}
+.find-teacher-list-container{overflow: hidden;width: 100%;margin-top: -1px;margin-bottom: -1px;}
+.find-teacher-list-container .find-teacher-card:nth-child(4){border-right:0}
 .find-teacher-card{width: 25%;border-right: @borderf6;border-bottom: @borderf6;float: left;}
-.find-teacher-information{margin: @margin;height: 46px;border-bottom: @borderf6;}
+.find-teacher-information{margin: 0 auto;width: 200px;height: 46px;border-bottom: @borderf6;}
 .find-teacher-name{margin-top: 14px;font-size: 26px;color: #333333;display: inline-block;}
 .find-teacher-v{margin-left: 12px;margin-bottom: -1px;vertical-align: bottom;}
 .find-teacher-sort{font-size: @fs12;color: @c9;margin-left: 7px;}
@@ -26,19 +28,19 @@
 .find-teacher-statistics{padding: 16px 17px 25px;font-size: 12px;color: #e74c3c;}
 .find-teacher-data-statistics{margin-right: 20px;}
 .find-teacher-data-statistics img{margin-right: 10px;}
-.find-teacher-photo-hover{position:absolute;width:200px;height: 200px;
+.find-teacher-photo-hover{position: absolute;width: 200px;height: 200px;
   background: -webkit-gradient(linear, 0% 65%, 0% 100%, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.85)));
-  background: -moz-linear-gradient(top,rgba(0, 0, 0, 0) 65%,rgba(0, 0, 0, 0.85) 100%);
-  background: -o-linear-gradient(top,rgba(0, 0, 0, 0) 65%,rgba(0, 0, 0, 0.85) 100%);
-  background: -ms-linear-gradient(top,rgba(0, 0, 0, 0) 65%,rgba(0, 0, 0, 0.85) 100%);
-;}
-.find-teacher-hover-container{overflow: hidden;margin: 17px 17px 14px;position: relative;display: inline-block;}
-.find-teacher-follow{width: 50px;height: 20px;background-color: #ffbc3c;position: absolute;right: 10px;border-radius: 2px;font-size: 12px;text-align: center;line-height: 12px;color: #fff;padding-top: 4px;cursor: pointer;}
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 65%, rgba(0, 0, 0, 0.85) 100%);
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 65%, rgba(0, 0, 0, 0.85) 100%);
+  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 65%, rgba(0, 0, 0, 0.85) 100%);}
+.find-teacher-hover-container{width:200px;height:200px;overflow: hidden;position: relative;margin: 17px auto 14px;}
+.find-teacher-hover{position: absolute;width: 200px;height: 200px;}
+.find-teacher-follow{position: absolute;bottom: 10px;width: 50px;height: 20px;background-color: #ffbc3c;display: block;right: 10px;
+  border-radius: 2px;font-size: 12px;text-align: center;line-height: 20px;color: #fff;cursor: pointer;}
 .find-teacher-have-followed{background-color: #dfdfdf;color:@c9;}
 .findBreadCrumb{margin-top: 17px}
 .findClassRight{padding: 0;}
 .findRightList{margin-bottom: 20px;}
 .findRightTitle{font-size: 16px;color: #666;display: inline-block;margin-bottom: 10px;}
 .find-teacher-list{overflow: hidden;border: 1px solid #eaeaea;margin-top: -1px;}
-.find-teacher-list-container{overflow: hidden;width: 102%;margin-top: -1px;}
 .row{margin: 0;}
