Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/UserHome.wrongQues/error_question.less
+++ b/source/widget/UserHome.wrongQues/error_question.less
@@ -208,7 +208,7 @@ div{
 
 /* 年级以及知识点选择css(start) */
 .choiceSet{
-  border-bottom: 1px dashed rgb(241,242,246);
+  border: 1px dashed rgb(241,242,246);
   padding: 0 @LRpadding;
 }
 @grey:rgb(102,102,102);
