--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -682,53 +682,91 @@ ul,li{list-style: none;}
 	}
 }
 // 筛选条
-.find-teacher-rank-title{
-    background-color: #fcfcfc;
-    border: 1px solid #eaeaea;
-    font-size: 12px;
-    height: 38px;
-    width: 100%;
-    div{
-        background-color: #fff;
-        border-right: 1px solid #eaeaea;
-        color: #1e89e0;
-        float: left;
-        height: 36px;
-        margin-right: 3px;
-        line-height: 36px;
-        text-align: center;
-        width: 65px;
-    }
-    span{
-        display: inline-block;
-        line-height: 36px;
-        padding-left: 27px;
-        img{
-            margin-left: 5px;
-        }
-    }
-}
-.find-teacher-account {
-    color: #999999;
-    float: right;
-    margin-right: 15px;
-    input{
-    	float: left;
-    	margin-top: 11px;
-    	margin-right: 5px;
-    }
-    b{
-    	font-style: normal;
-    	float: left;
-    	font-weight: normal;
-    }
+.screen-rank {
+	border: 1px solid #eaeaea;
+	height: 38px;
+	line-height: 38px;
+	margin: 0;
+	overflow: hidden;
+	padding-left: 0;
+	li {
+		cursor: pointer;
+		float: left;
+		font-size: 12px;
+		list-style: outside none none;
+		padding: 0 10px;
+
+		img{
+			margin-left: 5px;
+		}
+	}
+	li.popular-rank {
+		border-right: 1px solid #eaeaea;
+		color: #1e89e0;
+		padding: 0 20px;
+	}
+	.Onlylive-select {
+		color: #999999;
+		float: right;
+		margin-right: 15px;
+		input{
+			float: left;
+			margin-top: 12px;
+			margin-right: 5px;
+		}
+		b{
+			font-style: normal;
+			float: left;
+			font-weight: normal;
+		}
+	}
 }
 
 .search_tips{
 	border-bottom: 1px solid #eaeaea;
 	height: 42px;
 	line-height: 42px;
+	font-size: 12px;
+	color: #999999;
+	font-family: "SimSun";
 	span{
-		color: #cc0000;
+		color: #e74c3c;
+	}
+
+}
+// 搜索页右边排行
+.search-rank-title{
+	margin-top: 0;
+}
+.search-rank-list{
+	height: 210px;
+	padding: 10px 5px 10px 5px;
+	background: #fcfcfc;
+	font-family: "SimSun";
+	font-size: 14px;
+	color: #333;
+	li{
+		overflow: hidden;
+		line-height: 22px;
+		padding:5px 0;
+		label{
+			font-weight: normal;
+			width: 14px;
+			line-height: 14px;
+			font-family: arial;
+			display: inline-block;
+			border-radius: 3px;
+			background: #cccccc;
+			color: #fff;
+			margin: 4px 10px 0 0;
+			text-align: center;
+			float: left;
+		}
+		label.search-rank-first{
+			background: #f77300;
+		}
+		a{
+			float: left;
+		}
 	}
 }
