排行筛选栏样式更改

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -129,7 +129,7 @@ ul,li{list-style: none;}
 		display: block;
 		overflow: hidden;
 		p{
-			margin: 8px 0;
+			margin:0 0px 8px;
 			overflow: hidden;
 			font-size: 12px;
 		}
@@ -689,6 +689,7 @@ ul,li{list-style: none;}
 	margin: 0;
 	overflow: hidden;
 	padding-left: 0;
+	background: #fcfcfc;
 	li {
 		cursor: pointer;
 		float: left;
@@ -704,6 +705,7 @@ ul,li{list-style: none;}
 		border-right: 1px solid #eaeaea;
 		color: #1e89e0;
 		padding: 0 20px;
+		background: #fff;
 	}
 	.Onlylive-select {
 		color: #999999;
@@ -739,7 +741,7 @@ ul,li{list-style: none;}
 	margin-top: 0;
 }
 .search-rank-list{
-	height: 210px;
+	height: 220px;
 	padding: 10px 5px 10px 5px;
 	background: #fcfcfc;
 	font-family: "SimSun";
