--- a/source/widget/Public.Module/glory.less
+++ b/source/widget/Public.Module/glory.less
@@ -6,6 +6,7 @@
 	line-height: 38px;
 	padding-left: 0;
 	margin: 20px 0;
+	background: #fcfcfc;
 	li{
 		list-style: none;
 		float: left;
@@ -17,6 +18,7 @@
 		padding: 0 20px;
 		border-right: 1px solid @borderColor;
 		color: #1e89e0;
+		background: #fff;
 	}
 }
 .gloryConPicId {
