课程列表样式更改

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -129,7 +129,7 @@ ul,li{list-style: none;}
 		display: block;
 		overflow: hidden;
 		p{
-			margin:0 0px 8px;
+			margin: 8px 0;
 			overflow: hidden;
 			font-size: 12px;
 		}
