Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/UserHome.wrongQues/error_question.less
+++ b/source/widget/UserHome.wrongQues/error_question.less
@@ -216,8 +216,7 @@ div{
   font-size: 1.2rem;
   display: inline-block;
   border-radius: 2px;
-  margin:1.1rem 1rem 0 0;
-  padding:0.2rem 0.5rem;
+  padding:0.4rem 0.8rem;
   text-align: center;
   cursor: pointer;
 }
@@ -228,11 +227,9 @@ div{
 .choiceTip{
   color:@grey;
   font-size: 1.2rem;
-  margin:1.1rem 0 1.1rem 0;
-  padding:0.2rem 0;
+  padding:1.2rem 1.2rem 1.2rem 0;
   text-align: center;
-  width:5rem;
-  margin-right:1rem;
+  width:6rem;
 };
 .choice{
   margin-bottom: 2rem;
@@ -243,7 +240,8 @@ div{
       .choiceTip
     }
     .choice-grade-cur{
-      span{
+      .choice-grade-name{
+        line-height: 1;
         .choiceSetting;
       }
     }
