--- a/source/widget/homework/homework.less
+++ b/source/widget/homework/homework.less
@@ -552,6 +552,24 @@
         .homework-ImageTransform{
             height: 470px;
         }
+
+        /**
+         * 作业反馈style
+         */
+        .homework-Feedback{
+             background: url("img/htmlBg_1024.png") no-repeat;
+             height: 460px;
+             margin-left: -277.5px;
+             margin-top: -230px;
+        }
+        .homework-Feedback-header{
+             margin:23px 0 0 0;
+        }
+        p{
+            &.homework-Feedback-describe{
+                height: 160px;
+            }
+        }
     }
 
     /** 
