--- a/source/widget/Public.Nav/nav.less
+++ b/source/widget/Public.Nav/nav.less
@@ -14,6 +14,8 @@
     margin: 0 auto;
     font-size: 14px;
     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
+    position: relative;
+    z-index: 4;
     .container {
         position: relative;
         ul.head-nav {
