--- a/source/widget/indexFocus/ui-carousel.less
+++ b/source/widget/indexFocus/ui-carousel.less
@@ -13,7 +13,8 @@
 		.focus-list {
 				overflow: hidden;padding:0;
 				li {
-					width: 100%; height: 380px;float: left; position: absolute; z-index: 2;list-style: none;opacity:0;
+					width: 100%; height: 380px;float: left; position: absolute; z-index: 2;list-style: none;opacity:1;
+					background:url(pic/helloWeen_2015.jpg) top center no-repeat;
 					a {
 						display:block;width:100%;height: 380px; text-indent: -999999em;
 					}
@@ -25,9 +26,9 @@
 
 /*=================/图片轮播缩小图/============================*/
 #index-focus .focus-num-wrap {
-		width:980px;height: 30px; margin: 0 auto; position: relative;z-index: 11;top:335px; 
+		width:980px;height: 30px; margin: 0 auto; position: relative;z-index: 2;top:345px; 
 		ol.focus-num {
-			width:100%;position: absolute; right:-20px; 
+			width:100%;position: absolute; right:-115px; 
 			li { 
 				float: left; display: inline; width: 110px;height: 26px;line-height: 26px; border-radius: 1px; margin:0 1px;cursor: pointer; text-align: center;list-style: none;overflow: hidden;background-color:rgba(180,180,180,1);
 			}
