--- a/source/widget/indexTrends/ui-trends.less
+++ b/source/widget/indexTrends/ui-trends.less
@@ -1,9 +1,20 @@
 //首页最新资讯
+.ui-index-trends {
+	width: 1190px;
+	margin:0 auto;
+	position: relative;
+	z-index: 3;
+	top:0;
+}
 .index-new-trends {
 	width: 280px;
 	height: 380px;
 	overflow: hidden;
 	background:#fff;
+	position: absolute;
+	right: 0;
+	top:0;
+	z-index: 1;
 	.trends-title {
 		width: 260px;
 		height: 40px;
