课程列表样式更改

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -334,7 +334,8 @@ ul,li{list-style: none;}
 }
 .course-list .fresh-course-attention{
 	font-size: 12px;
-	height: 20px;
+	height: 22px;
+	line-height: 22px;
 	em,i{
 		font-style: normal;
 	}
@@ -437,6 +438,7 @@ ul,li{list-style: none;}
 }
 .hover-feed{
 	background: #fcfcfc;
+	cursor: pointer;
 }
 .course-small-list{
 	width: 315px;
