--- a/source/widget/UM.password/password.css
+++ b/source/widget/UM.password/password.css
@@ -11,14 +11,19 @@
   color: #666;
   text-align: right;
 }
-.form-password span.error {
+.form-password .error-box {
   display: block;
   width: 210px;
   height: 30px;
   margin: 1px 0 0 65px;
   padding-top: 5px;
   line-height: 19px;
+}
+.form-password .error-box .error {
+  display: none;
   color: #e74c3c;
+  background: url("img/warning.png") no-repeat 10px 0;
+  padding-left: 32px;
 }
 .form-password label {
   font-weight: normal;
