--- a/source/widget/UM.Basic.information/basic-information.css
+++ b/source/widget/UM.Basic.information/basic-information.css
@@ -7,17 +7,17 @@
 .bi-content .bi-left {
   float: left;
 }
-.bi-content .bi-left p {
+.bi-content .bi-left div {
   position: relative;
   font-size: 12px;
   color: #666;
   clear: both;
 }
-.bi-content .bi-left p .date {
+.bi-content .bi-left div .date {
   display: inline-block;
   width: 460px;
 }
-.bi-content .bi-left p label {
+.bi-content .bi-left div label {
   float: left;
   width: 60px;
   margin: 0 5px 50px 0;
@@ -26,7 +26,7 @@
   font-weight: normal;
   cursor: text;
 }
-.bi-content .bi-left p select {
+.bi-content .bi-left div select {
   position: relative;
   top: -8px;
   width: 80px;
@@ -35,41 +35,46 @@
   color: #a0a0a0;
   border: 1px solid #dcdcdc;
 }
-.bi-content .bi-left p select:focus {
+.bi-content .bi-left div select:focus {
   border: 1px solid #3bafda;
 }
-.bi-content .bi-left p span {
+.bi-content .bi-left div span {
   color: #333;
 }
-.bi-content .bi-left p .error {
-  display: block;
-  width: 385px;
-  color: #e74c3c;
+.bi-content .bi-left div .error-box {
+  position: absolute;
+  clear: both;
+  width: 288px;
   height: 30px;
-  margin-left: 50px;
-  padding-top: 5px;
+  margin: 1px 0 0 55px;
   line-height: 19px;
 }
-.bi-content .bi-left p .prompt-empty {
+.bi-content .bi-left div .error-box .error {
+  display: none;
+  color: #e74c3c;
+  background: url("img/warning.png") no-repeat 10px 0;
+  padding-left: 32px;
+}
+.bi-content .bi-left div .prompt-empty {
   display: none;
   position: absolute;
   top: 40px;
   left: 65px;
 }
-.bi-content .bi-left p em {
+.bi-content .bi-left div em {
   margin-left: 20px;
   font-style: normal;
   color: #e74c3c;
 }
-.bi-content .bi-left p i {
+.bi-content .bi-left div i {
   position: relative;
   top: -8px;
   margin: 0 20px 0 5px;
   font-style: normal;
   color: #333;
 }
-.bi-content .bi-left p .nickname,
-.bi-content .bi-left p .school {
+.bi-content .bi-left div .nickname,
+.bi-content .bi-left div .school {
   position: relative;
   top: -8px;
   width: 260px;
@@ -77,14 +82,14 @@
   padding: 8px 5px;
   border: 1px solid #dcdcdc;
 }
-.bi-content .bi-left p .nickname:focus,
-.bi-content .bi-left p .school:focus {
+.bi-content .bi-left div .nickname:focus,
+.bi-content .bi-left div .school:focus {
   border: 1px solid #3bafda;
 }
 .bi-content .bi-left .btn-submit {
   width: 100px;
   height: 35px;
-  margin-top: 12px;
+  margin-top: 25px;
   font-size: 14px;
 }
 .bi-content .bi-right {
