--- a/source/widget/UM.card.learn/card.learn.css
+++ b/source/widget/UM.card.learn/card.learn.css
@@ -1,13 +1,3 @@
-span.error {
-  display: block;
-  width: 210px;
-  height: 30px;
-  margin: 1px 0 0 30px;
-  padding-top: 5px;
-  line-height: 19px;
-  font-size: 12px;
-  color: #e74c3c;
-}
 .gift-card-record {
   margin: 20px auto;
   padding: 10px 20px;
@@ -56,6 +46,19 @@ span.error {
   width: 310px;
   height: 175px;
   margin-top: 30px;
+}
+.gift-card-record .contentbind .cl-learn .cl-content .cl-content-right .error-box {
+  display: block;
+  height: 30px;
+  margin: 1px 0 0 32px;
+  padding-top: 5px;
+  line-height: 19px;
+}
+.gift-card-record .contentbind .cl-learn .cl-content .cl-content-right .error-box .error {
+  display: none;
+  color: #e74c3c;
+  background: url("img/warning.png") no-repeat 10px 0;
+  padding-left: 32px;
 }
 .gift-card-record .contentbind .cl-learn .cl-content .cl-content-right div label {
   float: left;
