--- a/source/widget/UM.mobile.phone/mobile.phone.css
+++ b/source/widget/UM.mobile.phone/mobile.phone.css
@@ -27,14 +27,20 @@
 .form-check input:focus {
   border: 1px solid #3bafda;
 }
-.form-check span {
+.form-check .error-box {
   display: block;
-  color: #e74c3c;
+  clear: both;
   width: 288px;
   height: 30px;
   margin: 1px 0 0 65px;
   padding-top: 5px;
   line-height: 19px;
+}
+.form-check .error-box .error {
+  display: none;
+  color: #e74c3c;
+  background: url("img/warning.png") no-repeat 10px 0;
+  padding-left: 32px;
 }
 .form-check .phone-user {
   height: 50px;
