--- a/source/widget/UM.mobile.phone/mobile.phone.less
+++ b/source/widget/UM.mobile.phone/mobile.phone.less
@@ -26,14 +26,20 @@
             border:1px solid #3bafda;
         }
     }
-    span{
+    .error-box{
         display: block;
-        color: #e74c3c;   
+        clear: both;  
         width: 288px;
         height: 30px;
         margin: 1px 0 0 65px;
         padding-top: 5px;
-        line-height:19px;          
+        line-height:19px;
+        .error{
+            display: none;
+            color: #e74c3c;
+            background: url("img/warning.png") no-repeat 10px 0;
+            padding-left: 32px; 
+        }
     }
     .phone-user{
         height: 50px;
