--- a/source/widget/UM.password/password.less
+++ b/source/widget/UM.password/password.less
@@ -10,14 +10,19 @@
         color: #666;
         text-align: right;
     }
-    span.error{
+    .error-box{
         display: block;  
         width: 210px;
         height: 30px;
         margin: 1px 0 0 65px;
         padding-top: 5px;
-        line-height:19px; 
-        color: #e74c3c; 
+        line-height:19px;
+        .error{
+            display: none;
+            color: #e74c3c;
+            background: url("img/warning.png") no-repeat 10px 0;
+            padding-left: 32px; 
+        }
     }
     label{
         font-weight: normal;
