--- a/source/widget/UserHome.wrongQues/error_question.less
+++ b/source/widget/UserHome.wrongQues/error_question.less
@@ -45,7 +45,9 @@ div{
   &{
     margin-top: 2rem;  
   }
-  
+  &:last-child{
+  	margin-bottom: 40px;
+  }
   .que-tips{
     margin-top: 1.2rem;
     margin-bottom: 1.2rem;
