课程列表样式更改

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -699,6 +699,7 @@ ul,li{list-style: none;}
 	overflow: hidden;
 	padding-left: 0;
 	background: #fcfcfc;
+	margin-top: 20px;
 	li {
 		cursor: pointer;
 		float: left;
