--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -109,6 +109,7 @@ em {
         width: 240px !important;
     }
 }
+
 .alert-warning {
     border-color: transparent;
     background: #ffdd87;
@@ -189,3 +190,91 @@ em {
     line-height: 42px;
     font-size: 16px;
 }
+/*首页公用标题样式和一些重构样式*/ 
+.grade-course-title {
+    height: 35px;
+    line-height: 35px;
+    border-bottom: 1px solid #3bafda;
+    margin-bottom: 20px;
+    h6 {
+        position: relative;
+        float: left;
+        width: 90px;
+        height: 35px;
+        background:#fff;
+        top:9px;
+        z-index: 1;
+        font-size: 18px;
+        color: #999;
+    }
+    ul.grade-list {
+        overflow: hidden;padding-left: 161px;
+        li {
+            float: left;
+            display: inline;
+            width: 50px;
+            height: 34px;
+            text-align: center;
+            font-size: 14px;
+            margin-right:15px;
+            cursor: pointer;
+            &.current {
+             border-bottom:2px solid #3bafda;
+             color: #3bafda;
+            }
+        }
+    }
+}
+.pull-right {
+    .fresh-list {
+        padding:12px 0;
+        .fresh-detail .fresh-text .fresh-info {
+            height: 58px;
+            line-height: 180%;
+            overflow: hidden;
+        }
+    }
+}
+.wrap-center {
+    width: 690px;
+    margin-left: 10px;
+    .panel-body {
+        width: 110%;
+    }
+    .course-small-list {
+        float: left;
+        display: inline;
+        margin:0 35px 20px 0;
+    }
+}
+.row-page-turn {
+    padding:0 5px;
+    margin-bottom: 20px;
+   .page-turn {
+        width: 45px;
+        height: 115px;
+        cursor: pointer;
+        text-indent: -9999em;
+        &.page-up {
+            background: url(../../widget/Public.Module/img/page-up-default.png) 0 no-repeat;
+        }
+        &.page-down {
+            background: url(../../widget/Public.Module/img/page-down-default.png) 0 no-repeat;
+        }
+        &.page-up-disable {
+                background: url(../../widget/Public.Module/img/page-up-disable.png) 0 no-repeat;
+        }
+        &.page-down-disable {
+                background: url(../../widget/Public.Module/img/page-down-disable.png) 0 no-repeat;
+        }
+   }
+   .page-turn-box {
+        overflow: hidden;
+        .course-small-list {
+            float: left;
+            display: inline;
+            margin:0 36px 0 15px;
+        }
+   }
+}
+/*首页公用标题样式和一些重构样式 结束位置*/ 
