--- a/source/widget/Public.FocusPic/ui-focusPic.less
+++ b/source/widget/Public.FocusPic/ui-focusPic.less
@@ -7,7 +7,7 @@
  */
 
 
-#index-focus {
+#ui-focus-public {
 		height: 380px;overflow: hidden;
 		/*=================/图片轮播大图/============================*/
 		.focus-list {
@@ -21,18 +21,18 @@
 				}
 				li.current { z-index: 10;}
 		}
-}
-
-
-/*=================/图片轮播缩小图/============================*/
-#index-focus .focus-num-wrap {
-		width:980px;height: 30px; margin: 0 auto; position: relative;z-index: 2;top:345px; 
-		ol.focus-num {
-			width:100%;position: absolute; right:-115px; 
-			li { 
-				float: left; display: inline; width: 110px;height: 26px;line-height: 26px; border-radius: 1px; margin:0 1px;cursor: pointer; text-align: center;list-style: none;overflow: hidden;background-color:rgba(180,180,180,1);
-			}
-			li.current {background: #fff;}
+		/*=================/图片轮播缩小图/============================*/
+		.focus-num-wrap {
+				width:980px;height: 30px; margin: 0 auto; position: relative;z-index: 2;top:345px; 
+				ol.focus-num {
+					width:100%;position: absolute; right:-115px; 
+					li { 
+						float: left; display: inline; width: 110px;height: 26px;line-height: 26px; border-radius: 1px; margin:0 1px;cursor: pointer; text-align: center;list-style: none;overflow: hidden;background-color:rgba(180,180,180,1);
+					}
+					li.current {background: #fff;}
+				}
 		}
 }
+
+
 
