--- a/source/widget/UM.card.learn/card.learn.less
+++ b/source/widget/UM.card.learn/card.learn.less
@@ -435,10 +435,9 @@
                 }
                 .formPastPayment {
                     overflow: hidden;
-                    .btn_blue {
-                        border-radius: 3px;
+                    .cl-btn{
+                        padding: 6px 28px;
                         font-size: 14px;
-                        padding: 10px 28px;
                     }
                 }
             }
