--- a/source/widget/UM.head.photo/head.photo.css
+++ b/source/widget/UM.head.photo/head.photo.css
@@ -61,6 +61,7 @@
   max-height: 340px;
 }
 .hp-content .hp-box-left .hp-local .hl-box .btn_up .btn_loadFile {
+  display: inline-block;
   position: absolute;
   width: 150px;
   height: 42px;
@@ -69,6 +70,7 @@
   font-size: 16px;
 }
 .hp-content .hp-box-left .hp-local .hl-box #loadFile {
+  display: inline-block;
   position: absolute;
   top: 150px;
   left: 125px;
@@ -95,6 +97,22 @@
   font-family: "SimSun";
   font-size: 12px;
   color: #666;
+}
+.hp-content .hp-box-left .hp-local .btn_up .btn_loadFile {
+  display: none;
+  float: right;
+  margin-right: 170px;
+}
+.hp-content .hp-box-left .hp-local #loadFile {
+  display: none;
+  float: right;
+  position: relative;
+  left: 98px;
+  width: 98px;
+  height: 35px;
+  cursor: pointer;
+  opacity: 0;
+  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
 }
 .hp-content .hp-box-left .btn-info {
   margin-bottom: 20px;
