--- a/source/widget/UM.head.photo/head.photo.less
+++ b/source/widget/UM.head.photo/head.photo.less
@@ -66,6 +66,7 @@
                 }
                 .btn_up{
                     .btn_loadFile{
+                        display: inline-block;
                         position: absolute;
                         width: 150px;
                         height: 42px;
@@ -75,6 +76,7 @@
                     }
                 }
                 #loadFile{
+                    display: inline-block;
                     position: absolute;
                     top: 150px;
                     left: 125px;
@@ -102,6 +104,24 @@
                     font-size: 12px;
                     color: #666;
                 }
+            }
+            .btn_up{
+                .btn_loadFile{
+                    display: none;
+                    float: right;
+                    margin-right: 170px;
+                }
+            }
+            #loadFile{
+                display: none;
+                float: right;
+                position: relative;
+                left: 98px;
+                width: 98px;
+                height: 35px;
+                cursor: pointer;
+                opacity: 0;
+                filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
             }
         }
         .btn-info{
