--- a/source/widget/Mall.FindTeacher/find-teacher.less
+++ b/source/widget/Mall.FindTeacher/find-teacher.less
@@ -15,8 +15,8 @@
 .find-teacher-intro{line-height: 0;font-size: 0;}
 .find-teacher-account{float:right;color: @c9;em{color: #e74c3c;font-style: normal;}margin-right: 15px;}
 .find-teacher-list-container{overflow: hidden;width: 100%;margin-top: -1px;margin-bottom: -1px;}
-.find-teacher-list-container .find-teacher-card:nth-child(4){border-right:0}
-.find-teacher-card{width: 25%;border-right: @borderf6;border-bottom: @borderf6;float: left;}
+.find-teacher-list .find-teacher-card:nth-child(4){border-right:0}
+.find-teacher-card{border-right: @borderf6;border-bottom: @borderf6;float: left;}
 .find-teacher-information{margin: 0 auto;width: 200px;height: 46px;border-bottom: @borderf6;}
 .find-teacher-name{margin-top: 14px;font-size: 26px;color: #333333;display: inline-block;}
 .find-teacher-v{margin-left: 12px;margin-bottom: -1px;vertical-align: bottom;}
