--- a/source/static/less/default.less
+++ b/source/static/less/default.less
@@ -215,7 +215,7 @@ em {
         float: right;
         font-size: 14px;
     }
-    ul.live-list {
+    ul.live-list-tabs {
         float: right;
         margin-right: 5px;
          overflow: hidden;
@@ -275,6 +275,9 @@ em {
 .row-page-turn {
     padding:0 5px;
     margin-bottom: 20px;
+    .live-content-action {
+        width: 110%;
+    }
    .page-turn {
         width: 45px;
         height: 115px;
