--- a/source/widget/Mall.live/live.less
+++ b/source/widget/Mall.live/live.less
@@ -1,4 +1,4 @@
-.live-title{color: #999;font-size: 18px;position: relative;}
+.live-title{color: #999;font-size: 18px;position: relative;margin-bottom: 20px;}
 .live-title span{display: inline-block;margin-right: 15px;float: left;}
 .live-title div{height: 22px;margin-left: 87px;border-bottom: 1px solid #eaeaea;}
 .live-scroll-btn-container{position: absolute;right: 0;top: 8px;list-style: none;}
@@ -24,5 +24,6 @@
 .live-enter-box{width: 245px;height: 50px;text-align: center;line-height: 50px;}
 .live-blue{background-color: #3bafda}
 .liveBreadCrumb{margin-top: 17px;}
+.choice .row{margin: 0;}
 
 
