--- a/source/widget/Public.Footer/footer.less
+++ b/source/widget/Public.Footer/footer.less
@@ -50,7 +50,7 @@
         width: 215px;
         overflow: hidden;
         cursor: pointer;
-        height: 56px;
+//        height: 56px;
         margin: 10px 10px 0 20px;
         padding-left: 60px;
         text-decoration: none;
